--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -58,12 +58,21 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="utility\filtering\AndCriteria.cs" />
+    <Compile Include="utility\filtering\AnonymousCriteria.cs" />
+    <Compile Include="utility\filtering\BinaryCriteria.cs" />
+    <Compile Include="utility\filtering\Criteria.cs" />
     <Compile Include="collections\Genre.cs" />
-    <Compile Include="collections\ISpecification.cs" />
+    <Compile Include="collections\IsPublishedAfter.cs" />
+    <Compile Include="collections\IsPublishedBy.cs" />
     <Compile Include="collections\Movie.cs" />
+    <Compile Include="collections\MovieCriteria.cs" />
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="utility\EnumerableExtensions.cs" />
+    <Compile Include="utility\filtering\CriteriaExtensions.cs" />
+    <Compile Include="utility\filtering\NotCriteria.cs" />
+    <Compile Include="utility\filtering\OrCriteria.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
