--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -73,6 +73,7 @@
     <Compile Include="utility\filtering\CriteriaExtensions.cs" />
     <Compile Include="utility\filtering\NotCriteria.cs" />
     <Compile Include="utility\filtering\OrCriteria.cs" />
+    <Compile Include="utility\filtering\Where.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
