--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -71,6 +71,7 @@
     <Compile Include="collections\ProductionStudio.cs" />
     <Compile Include="utility\EnumerableExtensions.cs" />
     <Compile Include="utility\filtering\CriteriaExtensions.cs" />
+    <Compile Include="utility\filtering\CriteriaFactory.cs" />
     <Compile Include="utility\filtering\NotCriteria.cs" />
     <Compile Include="utility\filtering\OrCriteria.cs" />
     <Compile Include="utility\filtering\Where.cs" />
