--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -61,6 +61,7 @@
     <Compile Include="utility\filtering\AndCriteria.cs" />
     <Compile Include="utility\filtering\AnonymousCriteria.cs" />
     <Compile Include="utility\filtering\BinaryCriteria.cs" />
+    <Compile Include="utility\filtering\ComparableCriteriaFactory.cs" />
     <Compile Include="utility\filtering\Criteria.cs" />
     <Compile Include="collections\Genre.cs" />
     <Compile Include="collections\IsPublishedAfter.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="utility\EnumerableExtensions.cs" />
     <Compile Include="utility\filtering\CriteriaExtensions.cs" />
     <Compile Include="utility\filtering\CriteriaFactory.cs" />
+    <Compile Include="utility\filtering\DefaultCriteriaFactory.cs" />
     <Compile Include="utility\filtering\NotCriteria.cs" />
     <Compile Include="utility\filtering\OrCriteria.cs" />
     <Compile Include="utility\filtering\Where.cs" />
