--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -74,8 +74,12 @@
     <Compile Include="utility\filtering\CriteriaExtensions.cs" />
     <Compile Include="utility\filtering\CriteriaFactory.cs" />
     <Compile Include="utility\filtering\DefaultCriteriaFactory.cs" />
+    <Compile Include="utility\filtering\GreaterThan.cs" />
+    <Compile Include="utility\filtering\IsBetween.cs" />
+    <Compile Include="utility\filtering\IsEqualToAny.cs" />
     <Compile Include="utility\filtering\NotCriteria.cs" />
     <Compile Include="utility\filtering\OrCriteria.cs" />
+    <Compile Include="utility\filtering\PropertyCriteria.cs" />
     <Compile Include="utility\filtering\Where.cs" />
   </ItemGroup>
   <ItemGroup>
