Updated the where and filtering specs

--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep.specs/nothinbutdotnetprep.specs.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep.specs/nothinbutdotnetprep.specs.csproj
@@ -64,12 +64,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\thirdparty\machine.specifications\Machine.Specifications.DevelopWithPassion.Rhino.dll</HintPath>
     </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.6.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\thirdparty\machine.specifications\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AndCriteriaSpecs.cs" />
     <Compile Include="MovieLibrarySpecs.cs" />
     <Compile Include="utility\CollectionExtensions.cs" />
   </ItemGroup>
