--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -58,6 +58,8 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="collections\IsOlderThan.cs" />
+    <Compile Include="collections\Person.cs" />
     <Compile Include="utility\filtering\AndCriteria.cs" />
     <Compile Include="utility\filtering\AnonymousCriteria.cs" />
     <Compile Include="utility\filtering\BinaryCriteria.cs" />
@@ -74,6 +76,7 @@
     <Compile Include="utility\filtering\CriteriaExtensions.cs" />
     <Compile Include="utility\filtering\CriteriaFactory.cs" />
     <Compile Include="utility\filtering\DefaultCriteriaFactory.cs" />
+    <Compile Include="utility\filtering\FallsInRange.cs" />
     <Compile Include="utility\filtering\GreaterThan.cs" />
     <Compile Include="utility\filtering\IsBetween.cs" />
     <Compile Include="utility\filtering\IsEqualToAny.cs" />
@@ -81,6 +84,8 @@
     <Compile Include="utility\filtering\OrCriteria.cs" />
     <Compile Include="utility\filtering\PropertyCriteria.cs" />
     <Compile Include="utility\filtering\Where.cs" />
+    <Compile Include="utility\range\InclusiveRange.cs" />
+    <Compile Include="utility\range\Range.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
